@@ -1,6 +1,4 @@
 AUX docs_gen.patch 603 RMD160 9711ddb1c59e8ddd1ad17ba34f89c8e4c89b4504 SHA1 83cd745baabd1545a1079c59edef6279b254074a SHA256 7428155e6f09201d60f308c3934153aa5fa5b25296a96d86dad80354dc8e3b93
-DIST qt-creator-1.2.0-src.zip 8636682 RMD160 0b32dcd979e8384461389515de10eacf0141bbdc SHA1 781f0effa5ba7ad19efde0745e42e192e9fa88d4 SHA256 c13001cd1fe939cc71c60f6ac506b79143b44cc40954469a6fa269d107176feb
-EBUILD qt-creator-1.2.0.ebuild 3012 RMD160 71b5d1b43ca49756f7b846980331902b93d014dc SHA1 85259d87b3af3f6efe50bd49a22ebb9902c6ab97 SHA256 c9392cc584035461686d867eb5d74b55f69ee6a825a4a96bac8fdd19e645b1d5
 EBUILD qt-creator-9999.ebuild 2926 RMD160 996c28ed7eb6bf97d95f501fcec6d852486f7b9f SHA1 75a4c310c37e75607d60121be5b5ccae4c55132d SHA256 ec13e948d585a31ac81fde6e67aeaee1328523dd8abd1a4d60783b93bf21ad95
-MISC ChangeLog 7234 RMD160 09c444a5cd49cd283e3972bfd20a2ddca0ea38d8 SHA1 6b5f65b44a9bb902fa77a39e95bbba1bec3f12b1 SHA256 81322b127371a8ac06803188b527121f35e02037cf892a2d718bcb90dc8e8f4b
+MISC ChangeLog 7326 RMD160 35a3884b79f42a689d53b0755f3933a3ad40c189 SHA1 03ee0ca92c825228dfdce1eb5417877ffeed398a SHA256 f651037dede5bc946a49e91f739c5b8b04b973f0e8cce5ce58d51dddaeeb5fe0
 MISC metadata.xml 895 RMD160 8801ac01fc39baecabe094b64ba41a6a5c7c597f SHA1 e7b045c7ba1bec8eced17bbe88fc25eae5777bbe SHA256 4d5ebb9d910fb447d8082a845269c1cfca0f3891b7acfe50a7f27e124501eddb
